# SheetGo

./: .gitignore  dev.bat
docs/: 00-architecture.md  01-app-shell.md  02-file-manager.md  03-preload-pipeline.md  04-excel-engine.md  05-validation.md  06-agent-core.md  07-session-store.md  08-ui-components.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: main.cjs  preload.cjs  python-sidecar.cjs  workspace.cjs
frontend/scripts/: electron-dev.cjs
frontend/src/: App.tsx  electron-api.d.ts  main.tsx  univer-locales.d.ts
python/: .env copy  config.py  main.py  requirements.txt
python/agent/: __init__.py  engine.py  hook_manager.py  llm_provider.py  models.py  prompt_builder.py  tool_registry.py
python/benchmark/: __init__.py  evaluator.py  runner.py
python/excel/: __init__.py  chart_engine.py  duckdb_query.py  formula_parser.py  models.py  reader.py  style_engine.py  template_engine.py  writer.py  xml_helpers.py
python/file_manager/: __init__.py  manager.py
python/preload/: __init__.py  formula_scanner.py  pipeline.py  schema_extractor.py  stats_calculator.py  structure_analyzer.py  structure_llm.py  style_extractor.py
python/session/: __init__.py  database.py  memory.py  models.py  rollback.py  snapshot.py
python/tests/: conftest.py  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sidecar.rs  workspace.rs
src-tauri/src/commands/: agent.rs  config.rs  file.rs  mod.rs  session.rs
其他项目架构参考/: readme.md
(+40 files in other folders)
